[FIX] new ngx image cropper

--- a/src/app/counter/consumption-counter/consumption-counter.page.scss
+++ b/src/app/counter/consumption-counter/consumption-counter.page.scss
@@ -55,32 +55,3 @@ ion-content {
     font-size: 1.5rem;
   }
 }
-
-.scan-box {
-  border: 2px solid #fff;
-  box-shadow: 0 0 0 100vmax rgb(0, 0, 0, 0.5);
-  content: "";
-  display: block;
-  left: 50%;
-  height: 300px;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
-}
-
-canvas {
-  filter: blur(8px);
-  position: relative;
-  &:before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 40px;
-    width: 80%;
-    border: 1px solid white;
-    filter: blur(0);
-  }
-}
